[package]
name          = "loggerithm"
description   = "A logging library for everyone."
version       = "1.0.0-rc.2"
keywords      = ["log", "logging", "logger"]
categories    = ["development-tools::debugging"]

homepage      = "https://github.com/Totobird-Creations/loggerithm"
repository    = "https://github.com/Totobird-Creations/loggerithm"
documentation = "https://https://docs.rs/loggerithm"
readme        = "README.md"

authors       = ["Totobird Creations"]
license       = "MIT"

exclude       = [
    "/examples",
    ".replit",
    ".replit.sh",
    "replit.nix"
]

edition       = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_init = "1.0.3"
colored     = "2.0.0"
chrono      = "0.4.22"

[lib]
